# csv_parser

./: .gitignore  CMakeLists.txt  ClassDGram.drawio  README.md
data/: csv1.csv  csv1.txt  csv1_out.txt  csv2.csv  csv2_out.txt  csv3.csv  csv3_out.txt  csv4.csv  description.md
inc/: BinOp.hpp  CSVFile.hpp  CSVRow.hpp  CSVTree.hpp  CellAbstract.hpp  InconsistentRowErr.hpp
src/: BinOp.cpp  BinOp.hpp  BinOpCRTP.hpp  CMakeLists.txt  CSVFile.cpp  CSVFile.hpp  CSVRow.cpp  CSVRow.hpp  CSVTree.cpp  CSVTree.hpp  Cell.cpp  Cell.hpp  CellAbstract.cpp  CellAbstract.hpp  CellCRTP.hpp  InconsistentRowErr.cpp  InconsistentRowErr.hpp  NumericBinOp.cpp  NumericBinOp.hpp  NumericCell.cpp  NumericCell.hpp  StrBinOp.cpp  StrBinOp.hpp  StrCell.cpp  StrCell.hpp  a.h  detail.cpp  detail.hpp  main.cpp
tests/: BinOp_Tests.cpp  CMakeLists.txt  CSVFile_Tests.cpp  CSVTree_Tests.cpp  Cell_Tests.cpp  Detail_Tests.cpp  NumericBinOp_Tests.cpp  NumericCell_Testgrid.txt  NumericCell_Tests.cpp  Row_Tests.cpp  StrBinOp_Tests.cpp  StrCell_Tests.cpp  TreeExps.cpp  build_test.cpp
